# stat175-project

./: .gitignore  PROGRESS.md  README.md  WARNINGS.md  general-info.txt  pyproject.toml
configs/: default.yaml
configs/experiments/: ablation_cost_function.yaml  ablation_gnn_arch.yaml  ablation_synthetic_topology.yaml  main_pareto.yaml  robustness_adversarial_seed.yaml  robustness_compliance.yaml  robustness_sir.yaml
data/legacy_networkrepository/: README.md
docs/: CENTRAL-KNOWLEDGE.md  Project Outline.txt  latest-meeting.txt  lecture-transcript-about-project.txt  short-brief.md  useful-readings-A.md  useful-readings-B.md
notebooks/: 00_threshold_sanity.py  01_colab_train_full_gnn.py
paper/: main.tex  refs.bib
paper/figures/: main_auc_table.csv
presentation/: STAT175_LightningTalk.pptx  lightning-talk.md  slides-design.md
results/: ablation_cost_function.parquet  ablation_gnn_arch.parquet  ablation_synthetic_topology.parquet  campus_structural_stats.csv  cross_campus_regression.parquet  robustness_adversarial_seed.parquet  robustness_compliance.parquet  robustness_sir.parquet
results/summary/: ablation_headline.json  auc_by_policy_campus.csv  headline_numbers.json  main_pareto_summary.csv  robustness_headline.json  threshold_sanity.json
scripts/: 01_download_data.py  02_build_features.py  03_train_gnn.py  04_run_pareto.py  05_run_robustness.py  06_run_ablations.py  07_cross_campus_regression.py  08_make_figures.py  09_summarize_results.py  _cache_loader.py  train_gnn_helpers.py
tests/: test_policies.py  test_simulator.py
webapp/: app.py
(+17 files in other folders)
