[project]
name = "stat175"
version = "0.1.0"
description = "Cost-constrained edge removal for epidemic containment on social networks (STAT 175 final project)"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "scipy>=1.13",
    "networkx>=3.3",
    "pandas>=2.2",
    "scikit-learn>=1.5",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "pyarrow>=17.0",
    "python-louvain>=0.16",
    "torch>=2.4",
    "torch-geometric>=2.5",
    "streamlit>=1.38",
    "pyvis>=0.3.2",
    "ipykernel>=6.29",
    "jupyter>=1.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=8.3",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
